# moving_obstacle_gazebo

./: CMakeLists.txt  README.md  package.xml
launch/: moving_obstacle_gazebo.launch
scripts/: map_to_odom.py  pose_broadcaster.py  pose_listener.py  relative_position.py  robot_position.py
src/: animated_object.cc  independent_listener_ros.cc
world/: animated_box.world  animated_object.world
